After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737391 - GLib-GIO: g_dbus_interface_skeleton_unexport: assertion 'interface_->priv->connections != NULL' failed
GLib-GIO: g_dbus_interface_skeleton_unexport: assertion 'interface_->priv->co...
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-25 21:41 UTC by Paul Menzel
Modified: 2014-09-30 17:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
daemon: don't allow worker manager interface to be unexported more than once (2.73 KB, patch)
2014-09-30 17:19 UTC, Ray Strode [halfline]
committed Details | Review

Description Paul Menzel 2014-09-25 21:41:06 UTC
With Debian Sid/unstable and GDM 3.13.92 the following is shown in `sudo journalctl -u gdm`:

    gdm3[474]: GLib-GIO: g_dbus_interface_skeleton_unexport: assertion 'interface_->priv->connections != NULL' failed
Comment 1 Ray Strode [halfline] 2014-09-30 17:19:14 UTC
Created attachment 287473 [details] [review]
daemon: don't allow worker manager interface to be unexported more than once

if a conversation is stopped asynchronously and then synchronously, we
will end up trying to unexport the bus interface more than once, leading
to log spew.

This commit protects against that.
Comment 2 Ray Strode [halfline] 2014-09-30 17:21:29 UTC
Attachment 287473 [details] pushed as 9181419 - daemon: don't allow worker manager interface to be unexported more than once